--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,4 +1,4 @@
-s/*
+/*
   Theme Name: DevFolio
   Theme URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
   Author: BootstrapMade.com
